[tool.poetry]
name = "repl_python3_Role-Tracker-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pandas = "^1.3.2"
ctx = "^0.1.2"
gspread = "^4.0.1"
df2gspread = "^1.0.4"
gspread-dataframe = "^3.2.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
